--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "jshint": "^2.9.5",
-    "nightmare": "^3.0.0",
-    "selenium-webdriver": "3.0.0-beta-2"
+    "nightmare": "^3.0.1"
   },
   "scripts": {
     "dev": "meteor --settings settings/dev.json",
